# rm26radar

./: .gitignore  CMakeLists.txt  ConfigManager.cpp  ConfigManager.hpp  README.md  convert_classify.sh  main.cpp
.claude/: settings.json
.marscode/: deviceInfo.json
configs/: RMUC2025_National.PLY  calib_result.yaml  camera.yaml  detectConfig.yaml  map.yaml  model.yaml  outpost_roi.yaml  runtime.yaml  tracker.yaml
docs/: ARCHITECTURE.md  CAMERA_NODE.md  POSE_AND_RAYCASTING.md  QT_VISUALIZATION.md  ROS2_NODE_SYSTEM.md  TENSORRT_INFERENCE_PIPELINE.md  TRACKING_SYSTEM.md  apps_standalone.md  architecture.md  calibrate_node.md  config_manager.md  core_kalman.md  core_model.md  core_mouseback.md  core_pipeline.md  core_preprocess_cu.md  core_radarmap.md  core_raycaster.md  core_robot_id.md  core_tracker.md  core_tracker_types.md  detect_node.md  display_node.md  map_node.md  pose_node.md  qt_display_node.md  run.md  video_node.md
docs/apps/: apps_standalone.md
docs/config/: config_manager.md
docs/core/estimation/: core_hungarian.md
docs/core/identity/: core_bot_identity.md  core_robot_id.md
docs/core/map/: core_map_analyzer.md
docs/core/model/: core_model.md  core_preprocess.md
docs/core/pipeline/: core_pipeline.md
docs/core/pose/: core_posesolver.md
docs/core/tracking/: core_tracker.md  core_tracker_types.md
docs/learn/: 00_index.md  01_ros2基础.md  02_ros2节点开发.md  03_ros2消息与接口.md  04_ros2_launch与组件.md  05_c++现代特性.md  06_cuda与tensorrt.md  07_opencv与计算机视觉.md  08_目标跟踪与卡尔曼滤波.md  09_yaml配置管理.md  10_qt5可视化开发.md  11_eigen与数学计算.md  12_open3d与射线检测.md  13_cmake构建系统.md  14_项目架构与流水线.md  15_从零部署项目.md
docs/messages/: PipelineTiming.md
docs/nodes/: calibrate_node.md  detect_node.md  map_node.md  pose_node.md  roi_set_node.md
docs/overview/: architecture.md  kalman_architecture.md  performance_optimization.md  run.md
docs/visualization/: viz_draw.md  viz_ui.md
install/: local_setup.sh  setup.sh
install/tensorrt_detect/lib/tensorrt_detect/: calibrate_node  roi_set_node
install/tensorrt_detect/share/tensorrt_detect/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/tensorrt_detect/share/tensorrt_detect/cmake/: tensorrt_detectConfig-version.cmake  tensorrt_detectConfig.cmake
install/tensorrt_detect/share/tensorrt_detect/config/: ros2_params.yaml
install/tensorrt_detect/share/tensorrt_detect/environment/: ament_prefix_path.dsv  path.dsv
install/tensorrt_detect/share/tensorrt_detect/launch/: detect_pipeline.launch.py
install/tensorrt_detect_msgs/share/tensorrt_detect_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/tensorrt_detect_msgs/share/tensorrt_detect_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_tensorrt_detect_msgs__rosidl_generator_cExport-noconfig.cmake  export_tensorrt_detect_msgs__rosidl_generator_cExport-release.cmake  export_tensorrt_detect_msgs__rosidl_generator_cExport-relwithdebinfo.cmake  export_tensorrt_detect_msgs__rosidl_generator_cExport.cmake  export_tensorrt_detect_msgs__rosidl_generator_cppExport.cmake  export_tensorrt_detect_msgs__rosidl_generator_pyExport-noconfig.cmake  rosidl_cmake-extras.cmake  (+31 more)
log/: latest_build
notes/: main_note.md  model.cpp_note.md  model.hpp_note.md
rb26SDK/: CMakeLists.txt
rb26SDK/include/: CamreaExmple.hpp  sdk.h
rb26SDK/include/daheng/: daheng.hpp
rb26SDK/include/hik/: hik.hpp
rb26SDK/src/daheng/: daheng.cpp
rb26SDK/src/hik/: hik.cpp
src/position_prior/: CMakeLists.txt  README.md  package.xml
src/position_prior/config/: position_prior.yaml
src/position_prior/include/position_prior/: coordinate_transform.hpp  observation_confirmation.hpp  position_prior_model.hpp  prior_gate.hpp  prior_lifecycle.hpp  prior_types.hpp  team_selection.hpp
src/position_prior/src/: coordinate_transform.cpp  observation_confirmation.cpp  position_prior_model.cpp  position_prior_node.cpp  prior_gate.cpp  prior_lifecycle.cpp
src/position_prior/test/: test_coordinate_transform.cpp  test_model_golden.cpp  test_observation_confirmation.cpp  test_prior_gate.cpp  test_prior_lifecycle.cpp  test_team_selection.cpp
src/tensorrt_detect/: CMakeLists.txt  package.xml
src/tensorrt_detect/apps/: standalone_main.cpp
src/tensorrt_detect/config/: ros2_params.yaml
src/tensorrt_detect/include/tensorrt_detect/: ConfigManager.hpp
src/tensorrt_detect/include/tensorrt_detect/core/: bot_identity.hpp  hungarian.hpp  kalman.hpp  map_analyzer.hpp  model.hpp  mouseback.hpp  pipeline.hpp  posesolver.hpp  preprocess.hpp  radarmap.hpp  raycaster.hpp  robot_id.hpp  tracker.hpp  tracker_message.hpp  tracker_types.hpp
src/tensorrt_detect/include/tensorrt_detect/visualization/: draw.hpp  ui.hpp
src/tensorrt_detect/launch/: detect_pipeline.launch.py
src/tensorrt_detect/src/config/: ConfigManager.cpp
src/tensorrt_detect/src/core/: bot_identity.cpp  hungarian.cpp  kalman.cpp  map_analyzer.cpp  model.cpp  mouseback.cpp  pipeline.cpp  posesolver.cpp  preprocess.cu  radarmap.cpp  raycaster.cpp  tracker.cpp  tracker_message.cpp
src/tensorrt_detect/src/nodes/: calibrate_node.cpp  camera_node.cpp  detect_node.cpp  display_node.cpp  map_node.cpp  pose_node.cpp  qt_display_node.cpp  roi_set_node.cpp  video_node.cpp
src/tensorrt_detect/src/visualization/: draw.cpp  ui.cpp
src/tensorrt_detect/test/: test_tracker_state.cpp
src/tensorrt_detect_msgs/: CMakeLists.txt  package.xml
src/tensorrt_detect_msgs/msg/: DetectionBox.msg  MapTactics.msg  PipelineTiming.msg  PriorCandidate.msg  PriorPrediction.msg  PriorPredictionArray.msg  WorldTarget.msg
utils/: draw.cpp  model.cpp  mouseback.cpp  pipeline.cpp  posesolver.cpp  radarmap.cpp  raycaster.cpp  tracker.cpp  ui.cpp
utils/include/: draw.hpp  model.hpp  pipeline.hpp  posesolver.hpp  radarmap.hpp  tracker.hpp
(+154 files in other folders)
