<?xml version="1.0"?>
<package format="3">
  <name>position_prior</name>
  <version>0.1.0</version>
  <description>RMUC2026 per-role conditional position prior in shadow mode.</description>
  <maintainer email="delphine@example.com">delphine</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>openssl</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tensorrt_detect_msgs</depend>
  <depend>yaml-cpp</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
